fix meshkit hero alignment

--- a/_sass/brand.scss
+++ b/_sass/brand.scss
@@ -23,8 +23,8 @@ p {
 
 #meshkit-hero {
     height: 500px;
-    width: 100%;
-    align-content: center;
+    display: flex;
+    align-items: center;
     overflow: hidden;
 }
 
